upload test to do list

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <button id="addTodoBtn" class="add-todo-btn">Add Todo</button>
 
 
-        <div id="emptyState" class="empty-state">empty state</div>
+        <div id="emptyState" class="empty-state">no record of tasks and activities</div>
 
         <div id="todoModal" class="modal">
             <div class="modal-content">
